# data

./: .gitignore  README.md  pyproject.toml  schema.dbml
db/: db.sqlite3  schema.dbml
src/: __init__.py  main.py
src/db/: build_chromadb.py  build_sqlite.py  sql.py  update_supabase.py  utils.py
src/preprocess/: 1_extract_csv.py  2_extract_img.py  3_merge_csv.py  4_build_sqlite.py  5_build_vector.py  _1_extract_csv.py  _2_extract_img.py  _3_process_csv.py  _4_build_sqlite.py  _4_process_img.py  _5_build_sqlite.py  _5_build_vector.py  _6_build_vector.py  __init__.py  pipeline.py
tests/: test_face_recognition.py  test_similarity.py
