[project]
name = "ady201m-data"
version = "0.2.0"
description = "Data collection and preperation for ADY201m project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "dbml-sqlite>=0.3.3",
    "imutils>=0.5.4",
    "insightface>=1.0.1",
    "onnxruntime-gpu>=1.26.0",
    "pandas>=3.0.3",
]
